--- a/src/components/channels/list/list.module.css
+++ b/src/components/channels/list/list.module.css
@@ -12,6 +12,22 @@
   list-style-type: none;
 }
 
+.counter {
+  padding: 0 5px;
+  text-align: center;
+  margin-right: 5px;
+  display: inline-block;
+  color: currentColor;
+  border-radius: 10px;
+  flex: 0 0 15px;
+}
+
+.active {
+  color: #fff;
+  background-color: #2CAE7C;
+  font-weight: bold;
+}
+
 .btn {
   width: 100%;
   height: 40px;
@@ -21,9 +37,14 @@
   padding: 0 8px;
   border: 0 none;
   font-size: 16px;
+  color: currentColor;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.btn:disabled {
-  color: #fff;
-  background-color: #2CAE7C;
-  font-weight: bold;
+
+.name {
+  min-width: 0;
+  flex: 1 1 100%;
+
 }
