--- a/src/components/history/hystory.module.css
+++ b/src/components/history/hystory.module.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: flex-end;
   position: relative;
+  overflow-y: auto;
 }
 .item {
   list-style-type: none;
@@ -14,6 +15,9 @@
 }
 .wrapper {
   padding: 10px;
+  max-height: 100%;
+  overflow-y: auto;
+  width: 100%;
 }
 
 /* Dialog */
